feat: Add Version to Rest API (1.2) (#609)
* Replace setup.py with pyproject.toml

* Update version to current version

* Load version from pyproject into settings.py

* Add printline to 'python manage.py'

* Add `/api/version`-endpoint

* Use correct namespace + reformat

* Oops, wrong return

* Add API version to pyproject

* Remove support for Python 3.10

Removes 'tomli' dependency
